--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -383,7 +383,7 @@ bitcoin_cli_LDADD = \
   $(LIBBITCOIN_UTIL)
 
 bitcoin_cli_LDADD += $(BOOST_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(EVENT_LIBS)
-wallet_utility_LDADD = $(BOOST_LIBS) $(BDB_LIBS) $(CRYPTO_LIBS) $(LIBBITCOIN_CRYPTO) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_COMMON) $(LIBSECP256K1) libbitcoin_wallet.a
+wallet_utility_LDADD = libbitcoin_wallet.a $(LIBBITCOIN_COMMON) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) $(LIBBITCOIN_UTIL) $(BOOST_LIBS) $(BDB_LIBS) $(CRYPTO_LIBS)
 
 #
 
